# codecrafters-kafka-rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  server.rs  server_async.rs  server_sync.rs
src/protocol/: bytes.rs  cluster_metadata.rs  error.rs  mod.rs  primitives.rs  request.rs  response.rs
