[package]
name = "codecrafters-kafka"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
uuid = "1.17.0"
anyhow = "1.0.68"                              # error handling
bytes = "1.10.1"                               # helps manage buffers
thiserror = "1.0.38"                           # error handling
crc32c = "0.6.8"
tokio = { version = "1", features = ["full"] }
